fix sample update functionality